# AmesHousingPredictor

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mlflow  README.md  docker-compose.yml  index.html  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: train-model.yml
api/: main.py
app/: __init__.py  custom_transformers.py  main.py  requirements.txt  test_download.py
app/config/: settings.py
app/data_ingestion/: download_data.py  read_data.py
app/features/: feature_pipeline.py
app/inference/: predict.py
app/pipelines/: kaggle_utils.py  preprocessing.py  training.py
app/routes/: ames.py  health.py
app/schemas/: requests.py  responses.py
app/static/: index.html  main.js  styles.css
app/tests/: test_data_ingestion.py
app/utils/: logging_config.py
examples/: sample_request.json
frontend/: index.html  main.js
notebooks/: 1_data_ingestion.ipynb  2_feature_engineering.ipynb  3_model_training.ipynb  ames_notebooks.py  model_registration_example.ipynb  phase0_kaggle_download.ipynb  phase1_eda.ipynb  phase2_model_training.ipynb  phase3_kaggle_submission.ipynb
notebooks/example_utils/: custom_transformers.py
scripts/: run_notebooks.sh
web/: AmesHousing.sln
web/AmesHousing/: AmesHousing.csproj  Program.cs  _Imports.razor
web/AmesHousing/AmesHousing/: AmesHousing.csproj  Program.cs  _Imports.razor
web/AmesHousing/Api/: AmesHousingApiService.cs  IAmesHousingApiService.cs
web/AmesHousing/Layout/: MainLayout.razor
web/AmesHousing/Models/: HouseFeatures.cs
web/scripts/: GenerateCSharpModels.py
(+7 files in other folders)
