[project]
name = "ameshousingpredictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "ipython>=8.18.1",
    "joblib>=1.5.2",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.9.4",
    "mlflow>=3.1.4",
    "numpy>=2.0.2",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tool>=0.8.0",
    "xgboost>=2.1.4",
]
